Make tests can run on jdk17+